--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body>
         <div id="section-1">
-          She's my <a href="/pageTwo/pageTwo.html">sunshine</a> in the
+          She's my <a href="two/two.html">sunshine</a> in the
       
 
         <div class="rain">
